# git-dirty

./: Cargo.toml  README.md
src/: git.rs  main.rs
