[package]
name = "git-dirty"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "script that checks state of all git repositories in the given path"
homepage = "https://github.com/drag0dev/git-dirty"
repository = "https://github.com/drag0dev/git-dirty"
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.71"
colored = "2.0.0"
git2 = "0.17.1"
walkdir = "2.3.3"
